--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.14.25",
+    "@types/yargs": "^16.0.0",
     "pkg": "^4.4.9",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "yargs": "^16.2.0"
   }
 }
