--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es2018",                          
     "module": "commonjs",                    
-    "lib": ["es2015", "es2016", "es2017"],                     
+    "lib": ["es2017"],                     
     "allowJs": true,
     "outDir": "build",                          
     "rootDir": "src",
