--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "bin": "build/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "clean": "rm -rf dist",
+    "clean": "rm -rf build",
     "build": "tsc",
-    "prepare": "rm -rf dist; tsc",
+    "prepare": "rm -rf build; tsc",
     "pkg": "pkg -t host -o bin/lxce ."
   },
   "repository": {
@@ -24,6 +24,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "unique-names-generator": "^4.3.1",
     "yargs": "^16.2.0"
   }
 }
