--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.14.25",
+    "@types/table": "^6.0.0",
     "@types/yargs": "^16.0.0",
     "pkg": "^4.4.9",
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "table": "^6.0.7",
     "unique-names-generator": "^4.3.1",
     "yargs": "^16.2.0"
   }
