--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^14.14.25",
+    "@types/node": "^14.14.33",
     "@types/table": "^6.0.0",
     "@types/yargs": "^16.0.0",
     "pkg": "^4.4.9",
-    "typescript": "^4.1.5"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@types/inquirer": "^7.3.1",
+    "inquirer": "^8.0.0",
     "table": "^6.0.7",
-    "unique-names-generator": "^4.3.1",
+    "unique-names-generator": "^4.4.0",
     "yargs": "^16.2.0"
   }
 }
