--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "type": "git",
     "url": "/home/alice/repos/tfg-lxce"
   },
+  "pkg": {
+    "scripts": "build/**/*.js"
+
+  },
   "private": true,
   "author": "",
   "license": "ISC",
