project: add global logger
Added "loglevel" package into the project + a middleware function
to provide a default log level (intented to be set in the global
configuration file).

This package offers the following log methods:
- log.fatal
- log.error
- log.warn
- log.info
- log.debug
- log.trace
So by selecting a specific level (ej: info) we will get all the
log messages from (fatal, error, warn, info)

*Maybe it should be added colored output

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "pkg": {
     "scripts": "build/**/*.js"
-
   },
   "private": true,
   "author": "",
@@ -32,6 +31,7 @@
   "dependencies": {
     "@types/inquirer": "^7.3.1",
     "inquirer": "^8.0.0",
+    "loglevel": "^1.7.1",
     "table": "^6.0.7",
     "unique-names-generator": "^4.4.0",
     "yargs": "^16.2.0"
